ADD_EXECUTABLE(strcliselect01 strcliselect01.c)
TARGET_LINK_LIBRARIES(strcliselect01 unp)

ADD_EXECUTABLE(strcliselect02 strcliselect02.c)
TARGET_LINK_LIBRARIES(strcliselect02 unp)

ADD_EXECUTABLE(strsrvselect01 strsrvselect01.c)
TARGET_LINK_LIBRARIES(strsrvselect01 unp)

ADD_EXECUTABLE(strsrvselect02 strsrvselect02.c)
TARGET_LINK_LIBRARIES(strsrvselect02 unp)